<resources>
    <string name="app_name">Psycoolg doctor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="txt_agreement">Dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio. Dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.</string>
    <string name="terms_and_condtions">Terms and Conditions</string>
    <string name="accept_terms_amp_conditions"><![CDATA[Accept Terms & Conditions]]></string>
    <string name="earned_this_week">Earned this Week:</string>
    <string name="home">Home</string>
    <string name="booking">Booking</string>
    <string name="wallet">Wallet</string>
    <string name="profile">Profile</string>
    <string name="video_call">Video Call</string>
    <string name="default_txt">Lorem Adthe aetiohsdasdifowewieong twioansf ttwioasdf asdiowojosdj aisfj asdiwoj weisf wiefjaff eiwoj riwoj weiogaj weiroja we9ja wojasj ssddwsg aweoijsd0gj dsd0j00sddg te9js0j g0j0sdjf 9j0wegj s9jweg0ja w90js0j0 s9j0aj s0jsd0fj0asjjsdjl safjjsaojfsd sdjowjfjga sj0jwga0jsd s90j0sdfj s0jw0ejg0sj s0jgas e0jg0j0sj00je0j0sddjg0js0we gg0sjas
    ssjot stjojs tjsjfoo tjsjrej0ast s0js0dj0t s0jasjoj0t s0aj0ths s0ja0th s0tj00eh0sdg 0t0s0sht as0jt0e0sjd 0j0we0j0afh te0iat0is s0j0sa0fajltewja0gj0t as0jt0ha00j0gtj0sh0aj0t9sj s0tj0hst0e9ajs0t0s0dh0ts0j0fadsdfojojasddf asofjsdfjs jasfjossj tosdjatjodsdohtashouehg asljsjojassjjsdfojosahtojsdofofjaosdjfows sadojodjojasg jweojogj asodjagsojsdojowejojagojojeojaojooaojjosfojasfjwr
    asjofjeejrojaoddhsdjogohssojoahtojas sojtohsotosojoaweawghoa soejojagojohsagsa eojgohoaowhgojoa awjojojsgjojhhsa sojaghosojatosagh asjgjsjjfaljtahg asojotjosajotjsh sjojaojoajojlsjjojghostojish sojtojasjfoajthsohgojthdiodosahg sppajljsfjotjohdofhhagoht aojsjljafojthasahsjtojsdoghgtiojaldjhtssjajhtjsosioshtoj sjatosojsihtosjathsoihhhsoitoshhotia sjafjltthosjoahtojasoeithosjothasdfl
    aasfljtoja asljfalsjtha asjotjasd alsdjotjoaafst stadsojoajero adtljlajsitoh atioejahtea atojosjostajoastjojteijjojatejojstjstl iaosdjthssastioasht altjosjodjsjssojosj asljfotjoeoajosljaiotjs aslddjflajtojsoshaotjojjojasojstijo asdojttojoshatiajiibibiihihiihihiihihihivigihi
    ibbuvuguuuvuuuuvvuuguguguguuufuguguguyuuii iihiggufuugugufuvug7c8v8v8vg 88h88f88hgf77guf7guggf7ygufuguggufuguufggihiigi oihiigiiiggguyuuvuuguyugugugufugguff ihihihiggiigiifgihhihyuguuguguugguuvu ihihihihihigguufufuuguyguguyyufufuguguygguguyguguguugug iihihiigigiggufyfyfydtugugugyuyyufuggoijojoohohooho
    iiiibihihiiuguguigugiiihifuhihohihihihihihihgufufhhihiiuiihhg hogigihhihiguiguuggufhiggljguuguffyuufugkufuggkfgkhihiiiigigoojojoioigiufug iggfufugyguycyubuguuf ihigihihigoigiggufugogugugg iiggooihhigugfugfugugugufugufiiiyuvufuguguguguu guifiyuguufuiugugjugugufugugiuugug gigigugyuguiguguyfihoyufugoogug ihihihihihihigugfytyyfyfyfyfyytdtrtoihiuihihiuyfyytyftdttdtdrerrsrr uihihihihgugufufytyffuyfyfyfyudtdyfyyddtyfyuyytfyfycydtreloooo
    ooojojuguguguuguuuguguyuyfyhugufyffyyo;ojojojhihhuguguggfyfytyfyyfyfyfy ihoiioguiiiuhihihugugugugfiugufugugugif ihihiiihhihoohiuihuiiuigihiiioggiiiogigugguggfugg hiogugouuffiufufufffufufuyuyufufuyuyfuiuuiffu ihgooogguguguugufiyufuyfiyufufd7dyfufydyfufiffiff ouigggoigyuggoihhphggggugyuguufffuufiguguyifiyfuguffiugugohihgigii ioigigofifuufiiituguffufufyydyfufydigduiuyjbifuugufuyuuuyguybliiuiuiiu
    biihifuvufuuguhiuyfgfiggfiuyubgufuyuidy kgugugufugugugufufuuvufufuuffyydudyddyduydydtdyyyfydyfyjydj ihiiuuytuffyffdyfuffyfufffffydddydtdffyffyfyfyf ihhhhg8ggiugutyfvuiuuygufuyfruuvucyfyuuvucvu nojoiihohohhhohhippohoouhiitg8futuyufrytyyyuyuguu ihhiogugouvuyfufyctydtcressrextwerdtdcfytfyv nhojojppppkjojjjoljhijkugyuubuykuykyuujhuyuvuvuv gguggvuykfykjfkyfuyfyftyrsytrsyrdhdtrhdryfyihihihl
    hihihiiguygyfyfytcyxtrdtrcycrtht yfifytryryeyyyuffcufihihiubguyguyvuyffy ouugouruyfiyfytccuftycyudtycjtcyjc ihiubuouguigvyovyyyyyvgugug hihigugugygyuuuuuuuvittttfyfy uguifuffirufufufuiyffuifyfuyf utgiup9iuuihiihio;oopohohhohohpiihggyfytcytftdd fyffyydydydytueeudydtyetdtrsrxyysrssre trsyrsyasatrdtytdrystdersrdyarstr fytdtstsrdysy5srrrdtrtystsreawerrrrrrrrh gyuiuyfyftrdrytryrtysctr pjoihphuuoboibugouyfou
    ihiigkufyhjvytytyttdtryestfytrstc tdysrsytydtdtrsrkkuiuobugiiyfuy guifyirttyureuyfytffutyfytvlh ouibuguygiugufytfctytrdryesrdtrdtrrtddytsifuvcidtrtjv</string>

    <string-array name="titleArray">
        <item>Online Consultation</item>
        <item>Laboratory Diagnostics</item>
        <item>Medical Prescription</item>
    </string-array>

    <string-array name="subtitleArray">
        <item>Find and book an appointment with a \nbest psychologist</item>
        <item>Search and book diagnostic \ntest online</item>
        <item>Get genuine medicines delivered \nto your doorstep</item>
    </string-array>

    <!-- String array for Drawer Layout-->
    <string-array name="drawerNames">
        <item>Edit Profile</item>
        <item>Bookings</item>
        <item>Wallet</item>
        <item>View Blogs</item>
        <item>Quotes</item>
        <item>Offers</item>
        <item>Ranking</item>
        <item>Support</item>
        <item>Training</item>
        <item>Refer</item>
        <item>Logout</item>
    </string-array>

    <string-array name="homeItems">
        <item>Total Patient</item>
        <item>Today\'s Earing</item>
        <item>Today\'s Milestone</item>
        <item>Total Log In Hours</item>
    </string-array>
    <string-array name="value">
        <item>34</item>
        <item>Rs. 4150</item>
        <item>3</item>
        <item>9:30</item>
    </string-array>

    <string-array name="select_choose_topic">
        <item>Choose Topic</item>
        <item>Topic 1</item>
        <item>Topic 2</item>
        <item>Topic 3</item>
        <item>Topic 4</item>
    </string-array>

    <string-array name="select_category">
        <item>Category</item>
        <item>Category 1</item>
        <item>Category 2</item>
        <item>Category 3</item>
    </string-array>

    <string-array name="select_experience">
        <item>Select your experience</item>
        <item>Experience 1 Year</item>
        <item>Experience 3 Year</item>
        <item>Experience 5 Year</item>
    </string-array>

    <string-array name="select_earning">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <string name="refer_and_earn">Refer and Earn <b>Rs. 50</b> when you pay your first Fees inside the application</string>
    <string name="my_referrals">My Referrals</string>
    <string name="amount">Amount</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="submit_your_blog">Submit Your Blog</string>
    <string name="upload_blog_image">Upload Blog Image</string>
    <string name="submit">Submit</string>
    <string name="upload_quotes_image">Upload Quotes Image</string>
    <string name="quote_text_here">Quote text here....</string>
    <string name="your_name">Your Name</string>
    <string name="blog_text_here">Blog text here....</string>
    <string name="submit_quote">Submit Quote</string>
    <string name="my_request">My Request</string>
    <string name="request_id">Request Id</string>
    <string name="status">Status</string>
    <string name="type_your_message">Type your message....</string>
    <string name="create_ticket">Create Ticket</string>
    <string name="faq">FAQ</string>
    <string name="availability">Availability</string>
    <string name="dr_name">Dr.Name</string>
    <string name="rank">Rank</string>
    <string name="bonus_earned">Bonus Earned</string>
    <string name="wallet_amount">Wallet Amount</string>
    <string name="withdraw">Withdraw</string>
    <string name="wallet_history">Wallet History</string>
    <string name="bonus_history">Bonus History</string>
    <string name="mood_of_client">Mood Of Client</string>
    <string name="login_hours">Login Hours</string>
    <string name="cases_solved">Cases Solved</string>
    <string name="my_earning">My Earning</string>
    <string name="milestones">Milestones</string>

</resources>